Fix gap under Friendsgiving: portfolio-item a height 100%

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -675,6 +675,7 @@ body.menu-open .mobile-nav-overlay {
 .portfolio-item a {
   display: block;
   position: relative;
+  height: 100%;
 }
 
 .portfolio-item img {
